Fix user avatars stretching on mobile.

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -139,6 +139,14 @@ nav.navbar {
       width: 100%;
       max-width: 100%;
     }
+
+    &.hero-image-150 {
+      img {
+        height: 150px;
+        width: auto;
+        max-width: 100%;
+      }
+    }
   }
 
   .game-cover {
